--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -2,16 +2,28 @@
     <PropertyGroup>
         <!--#if (CentralPkgMgmt)-->
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-        <!--#if (Net8)-->
+        <!--#if (Net9)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.99-ci.net8.24518.4</MauiVersion>
+        <MauiVersion>9.0.10</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.92</MauiVersion>
+        <MauiVersion>9.0.10</MauiVersion>
+        <!--#endif-->
+        <!--#elif (Net8)-->
+        <!--#if (Nightly)-->
+        <MauiVersion>8.0.100</MauiVersion>
+        <!--#else-->
+        <MauiVersion>8.0.100</MauiVersion>
         <!--#endif-->
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
-        <!--#if (Net8)-->
+        <!--#if (Net9)-->
+        <!--#if (Nightly)-->
+        <MauiVersion>9.*-*</MauiVersion>
+        <!--#else-->
+        <MauiVersion>9.*</MauiVersion>
+        <!--#endif-->
+        <!--#elif (Net8)-->
         <!--#if (Nightly)-->
         <MauiVersion>8.*-*</MauiVersion>
         <!--#else-->
@@ -26,47 +38,32 @@
     <!--#endif-->
         <!--#if (Hybrid && RazorLib)-->
         <!--#if (Net9)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-rc.2.24474.3" />
-        <!--#elif (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.10" />
-        <!--#elif (Net7)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.20" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.35" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.11" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (Razor)-->
-        <PackageVersion Include="BlazorBindings.Maui" Version="1.0.1" />
+        <!--#if (Net9OrLater)-->
+        <PackageVersion Include="BlazorBindings.Maui" Version="3.0.6" />
+        <!--#else-->
+        <PackageVersion Include="BlazorBindings.Maui" Version="2.0.34" />
         <!--#endif-->
-        <!--#if (Comet)-->
-        <PackageVersion Include="Clancey.Comet" Version="0.3.467-beta" />
         <!--#endif-->
         <!--#if (AddFoldable)-->
-        <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
-        <!--#else-->
-        <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
-        <!--#endif-->
         <!--#endif-->
         <!--#if (AddMaps)-->
-        <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.3" />
-        <!--#endif-->
-        <!--#else-->
-        <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
-        <!--#if (AllPlatforms || IsWindows)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="1.0.4" />
+        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.4" />
         <!--#endif-->
         <!--#endif-->
-        <!--#endif-->
-        <!--#if (Net8OrLater)-->
         <!--#if (Hybrid || Razor)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (Net9)-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0-rc.2.24473.5" Condition="'$(Configuration)' == 'Debug'" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" Condition="'$(Configuration)' == 'Debug'" />
         <!--#else-->
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" Condition="'$(Configuration)' == 'Debug'" />
         <!--#endif-->
@@ -75,10 +72,10 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.0" />
+        <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
         <!--#endif-->
         <!--#if (AddSyncfusionToolkit)-->
-        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
+        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.2" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
@@ -91,34 +88,9 @@
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <!--#if (Net9)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0-rc.2" />
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.5.0" />
-        <!--#endif-->
-        <!--#endif-->
-        <!--#elif (Net7)-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#if (AddToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="6.1.0" />
-        <!--#endif-->
-        <!--#if (AddMarkup)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="3.3.1" />
-        <!--#endif-->
-        <!--#if (AddMedia)-->
-        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="2.0.0" />
-        <!--#endif-->
-        <!--#if (AddSharedToolkit)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="2.2.0" />
-        <!--#endif-->
-        <!--#else-->
-        <!--#if (AddToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
-        <!--#endif-->
-        <!--#if (AddMarkup)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="1.2.1" />
-        <!--#endif-->
-        <!--#if (AddSharedToolkit)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="1.2.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMvvmToolkit || (Mvvm && !Razor))-->
@@ -128,17 +100,17 @@
         <PackageVersion Include="CompiledBindings.MAUI" Version="1.0.18" />
         <!--#endif-->
         <!--#if (Reactor)-->
-        <!--#if (Net8OrLater)-->
-        <PackageVersion Include="Reactor.Maui" Version="2.0.51" />
-        <PackageVersion Include="Reactor.Maui.Canvas" Version="2.0.51" />
+        <!--#if (Net9OrLater)-->
+        <PackageVersion Include="Reactor.Maui" Version="3.0.0-beta" />
+        <PackageVersion Include="Reactor.Maui.Canvas" Version="3.0.0-beta" />
         <!--#if (AddMaps)-->
-        <PackageVersion Include="Reactor.Maui.Maps" Version="2.0.51" />
+        <PackageVersion Include="Reactor.Maui.Maps" Version="3.0.0-beta" />
         <!--#endif-->
         <!--#else-->
-        <PackageVersion Include="Reactor.Maui" Version="1.0.154" />
-        <PackageVersion Include="Reactor.Maui.Canvas" Version="1.0.154" />
+        <PackageVersion Include="Reactor.Maui" Version="2.0.55" />
+        <PackageVersion Include="Reactor.Maui.Canvas" Version="2.0.55" />
         <!--#if (AddMaps)-->
-        <PackageVersion Include="Reactor.Maui.Maps" Version="1.0.154" />
+        <PackageVersion Include="Reactor.Maui.Maps" Version="2.0.55" />
         <!--#endif-->
         <!--#endif-->
         <!--#endif-->
