--- a/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
@@ -2,16 +2,28 @@
     <PropertyGroup>
         <!--#if (CentralPkgMgmt)-->
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-        <!--#if (Net8)-->
+        <!--#if (Net9)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.99-ci.net8.24518.4</MauiVersion>
+        <MauiVersion>9.0.10</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.92</MauiVersion>
+        <MauiVersion>9.0.10</MauiVersion>
+        <!--#endif-->
+        <!--#elif (Net8)-->
+        <!--#if (Nightly)-->
+        <MauiVersion>8.0.100</MauiVersion>
+        <!--#else-->
+        <MauiVersion>8.0.100</MauiVersion>
         <!--#endif-->
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
-        <!--#if (Net8)-->
+        <!--#if (Net9)-->
+        <!--#if (Nightly)-->
+        <MauiVersion>9.*-*</MauiVersion>
+        <!--#else-->
+        <MauiVersion>9.*</MauiVersion>
+        <!--#endif-->
+        <!--#elif (Net8)-->
         <!--#if (Nightly)-->
         <MauiVersion>8.*-*</MauiVersion>
         <!--#else-->
@@ -24,7 +36,6 @@
     <!--#if (PackageRef)-->
     <ItemGroup>
     <!--#endif-->
-        <!--#if (Net8OrLater)-->
         <!--#if (UseMauiCore)-->
         <PackageVersion Include="Microsoft.Maui.Core" Version="$(MauiVersion)" />
         <!--#elif (UseMauiEssentials)-->
@@ -38,10 +49,10 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.0" />
+        <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
         <!--#endif-->
         <!--#if (AddSyncfusionToolkit)-->
-        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
+        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.2" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
@@ -55,7 +66,7 @@
         <!--#if (AddMaps)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.3" />
+        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.4" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddFoldable)-->
@@ -63,43 +74,10 @@
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <!--#if (Net9)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0-rc.2" />
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.5.0" />
         <!--#endif-->
-        <!--#endif-->
-        <!--#endif-->
-        <!--#elif (Net7)-->
-        <!--#if (AddToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="6.1.0" />
-        <!--#endif-->
-        <!--#if (AddMarkup)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="3.3.1" />
-        <!--#endif-->
-        <!--#if (AddMedia)-->
-        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="3.1.1" />
-        <!--#endif-->
-        <!--#if (AddMaps)-->
-        <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
-        <!--#if (AllPlatforms || IsWindows)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="1.0.4" />
-        <!--#endif-->
-        <!--#endif-->
-        <!--#if (AddFoldable)-->
-        <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
-        <!--#endif-->
-        <!--#if (AddSharedToolkit)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="2.2.0" />
-        <!--#endif-->
-        <!--#else-->
-        <!--#if (AddToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
-        <!--#endif-->
-        <!--#if (AddMarkup)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="1.2.1" />
-        <!--#endif-->
-        <!--#if (AddSharedToolkit)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="1.2.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMvvmToolkit)-->
