--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -2,16 +2,28 @@
     <PropertyGroup>
         <!--#if (CentralPkgMgmt)-->
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-        <!--#if (Net8)-->
+        <!--#if (Net9)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.99-ci.net8.24518.4</MauiVersion>
+        <MauiVersion>9.0.10</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.92</MauiVersion>
+        <MauiVersion>9.0.10</MauiVersion>
+        <!--#endif-->
+        <!--#elif (Net8)-->
+        <!--#if (Nightly)-->
+        <MauiVersion>8.0.100</MauiVersion>
+        <!--#else-->
+        <MauiVersion>8.0.100</MauiVersion>
         <!--#endif-->
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
-        <!--#if (Net8)-->
+        <!--#if (Net9)-->
+        <!--#if (Nightly)-->
+        <MauiVersion>9.*-*</MauiVersion>
+        <!--#else-->
+        <MauiVersion>9.*</MauiVersion>
+        <!--#endif-->
+        <!--#elif (Net8)-->
         <!--#if (Nightly)-->
         <MauiVersion>8.*-*</MauiVersion>
         <!--#else-->
@@ -38,46 +50,24 @@
         <!--#if (AddFormsMarkup)-->
         <PackageVersion Include="Xamarin.CommunityToolkit.Markup" Version="2.0.6" />
         <!--#endif-->
-        <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <!--#if (Net8)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddMauiToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.0" />
+        <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
         <!--#endif-->
         <!--#if (AddSyncfusionToolkit)-->
-        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
+        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.2" />
         <!--#endif-->
         <!--#if (AddMauiMarkup)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <!--#if (Net9)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0-rc.2" />
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.5.0" />
-        <!--#endif-->
-        <!--#endif-->
-        <!--#elif (Net7)-->
-        <!--#if (AddMauiToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="6.1.0" />
-        <!--#endif-->
-        <!--#if (AddMauiMarkup)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="3.3.1" />
-        <!--#endif-->
-        <!--#if (AddSharedToolkit)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="2.2.0" />
-        <!--#endif-->
-        <!--#else-->
-        <!--#if (AddMauiToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
-        <!--#endif-->
-        <!--#if (AddMauiMarkup)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="1.2.1" />
-        <!--#endif-->
-        <!--#if (AddSharedToolkit)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="1.2.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMauiMaps)-->
