--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -323,7 +323,11 @@
         <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
+        <!--#if (Net9)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="5.*" />
+        <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
+        <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <!--#if (Net9)-->
